; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_fast-export.c_anonymize_blob.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_fast-export.c_anonymize_blob.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i64 }

@anonymize_blob.counter = internal global i32 0, align 4
@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 8
@.str = private unnamed_addr constant [18 x i8] c"anonymous blob %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64*)* @anonymize_blob to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @anonymize_blob(i64* %0) #0 {
  %2 = alloca i64*, align 8
  %3 = alloca %struct.strbuf, align 8
  store i64* %0, i64** %2, align 8
  %4 = bitcast %struct.strbuf* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %4, i8* align 8 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 8, i1 false)
  %5 = load i32, i32* @anonymize_blob.counter, align 4
  %6 = add nsw i32 %5, 1
  store i32 %6, i32* @anonymize_blob.counter, align 4
  %7 = call i32 @strbuf_addf(%struct.strbuf* %3, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %5)
  %8 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %3, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64*, i64** %2, align 8
  store i64 %9, i64* %10, align 8
  %11 = call i8* @strbuf_detach(%struct.strbuf* %3, i32* null)
  ret i8* %11
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @strbuf_addf(%struct.strbuf*, i8*, i32) #2

declare dso_local i8* @strbuf_detach(%struct.strbuf*, i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
